--- a/Week_1/generate_html_from_api/generated_metmuseum_objects_table.html
+++ b/Week_1/generate_html_from_api/generated_metmuseum_objects_table.html
@@ -86,15 +86,17 @@
       <th>constituents_1_constituentULAN_URL</th>
       <th>constituents_1_constituentWikidata_URL</th>
       <th>constituents_1_gender</th>
-      <th>measurements_0_elementMeasurements_Weight</th>
       <th>measurements_1_elementName</th>
       <th>measurements_1_elementDescription</th>
-      <th>measurements_1_elementMeasurements_Diameter</th>
+      <th>measurements_1_elementMeasurements_Depth</th>
       <th>measurements_1_elementMeasurements_Height</th>
       <th>measurements_1_elementMeasurements_Weight</th>
+      <th>measurements_1_elementMeasurements_Width</th>
       <th>measurements_2_elementName</th>
       <th>measurements_2_elementDescription</th>
+      <th>measurements_2_elementMeasurements_Diameter</th>
       <th>measurements_2_elementMeasurements_Height</th>
+      <th>measurements_2_elementMeasurements_Weight</th>
       <th>tags_3_term</th>
       <th>tags_3_AAT_URL</th>
       <th>tags_3_Wikidata_URL</th>
@@ -167,6 +169,8 @@
       <td></td>
       <td>False</td>
       <td></td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -304,6 +308,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>2</th>
@@ -373,6 +379,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.7463</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -506,6 +514,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>4</th>
@@ -575,6 +585,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.7463</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -708,6 +720,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>6</th>
@@ -783,6 +797,8 @@
       <td>Coins</td>
       <td>http://vocab.getty.edu/page/aat/300037222</td>
       <td>https://www.wikidata.org/wiki/Q41207</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -910,6 +926,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>8</th>
@@ -979,6 +997,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.7463</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -1112,6 +1132,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>10</th>
@@ -1181,6 +1203,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.7000</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -1314,6 +1338,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>12</th>
@@ -1383,6 +1409,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.7000</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -1516,6 +1544,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>14</th>
@@ -1585,6 +1615,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.2700</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -1718,6 +1750,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>16</th>
@@ -1787,6 +1821,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>2.8575</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -1920,6 +1956,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>18</th>
@@ -1989,6 +2027,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>2.9000</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -2122,6 +2162,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>20</th>
@@ -2191,6 +2233,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>2.9000</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -2324,6 +2368,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>22</th>
@@ -2393,6 +2439,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.2700</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -2526,6 +2574,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>24</th>
@@ -2595,6 +2645,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.9050</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -2728,6 +2780,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>26</th>
@@ -2797,6 +2851,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.9050</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -2930,6 +2986,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>28</th>
@@ -2999,6 +3057,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.9050</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -3132,6 +3192,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>30</th>
@@ -3201,6 +3263,8 @@
       <td>Other</td>
       <td>Object diameter</td>
       <td>1.9050</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -3334,6 +3398,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>32</th>
@@ -3415,6 +3481,8 @@
       <td>7.0000</td>
       <td>7.0000</td>
       <td>8.90</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -3536,6 +3604,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>34</th>
@@ -3602,8 +3672,8 @@
       <td>True</td>
       <td>706</td>
       <td>NaN</td>
-      <td>Overall</td>
-      <td>None</td>
+      <td>Other</td>
+      <td>Body</td>
       <td>NaN</td>
       <td>Birds</td>
       <td>http://vocab.getty.edu/page/aat/300266506</td>
@@ -3614,24 +3684,26 @@
       <td>Animals</td>
       <td>http://vocab.getty.edu/page/aat/300249525</td>
       <td>https://www.wikidata.org/wiki/Q729</td>
-      <td>23.4950</td>
-      <td>49.3713</td>
-      <td>33.00</td>
+      <td>NaN</td>
+      <td>47.9426</td>
+      <td>NaN</td>
       <td>162539.0</td>
       <td>Manufacturer</td>
       <td>Manufactured by Tiffany &amp; Co.</td>
       <td>http://vocab.getty.edu/page/ulan/500330306</td>
       <td>https://www.wikidata.org/wiki/Q1066858</td>
       <td></td>
+      <td>Overall</td>
+      <td>NaN</td>
+      <td>23.495</td>
+      <td>49.3713</td>
       <td>10.977</td>
+      <td>33.0</td>
       <td>Other</td>
       <td>Cover</td>
       <td>12.2238</td>
       <td>10.795</td>
       <td>0.6001</td>
-      <td>Other</td>
-      <td>Body</td>
-      <td>47.9426</td>
       <td>Garlands</td>
       <td>http://vocab.getty.edu/page/aat/300167386</td>
       <td>https://www.wikidata.org/wiki/Q756600</td>
@@ -3718,6 +3790,8 @@
       <td>87.6302</td>
       <td>101.6000</td>
       <td>64.80</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -3837,6 +3911,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>https://images.metmuseum.org/CRDImages/ad/original/DP247756.jpg</td>
       <td>https://images.metmuseum.org/CRDImages/ad/original/117430.jpg</td>
     </tr>
@@ -3919,6 +3995,8 @@
       <td>https://www.wikidata.org/wiki/Q8441</td>
       <td>NaN</td>
       <td>31.4000</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
@@ -4041,6 +4119,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
+      <td>NaN</td>
+      <td>NaN</td>
     </tr>
     <tr>
       <th>39</th>
@@ -4121,6 +4201,8 @@
       <td>NaN</td>
       <td>NaN</td>
       <td>16.6688</td>
+      <td>NaN</td>
+      <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
       <td>NaN</td>
